Updated Swag
